fixed off-screen menu order on all pages

--- a/css/europegame.css
+++ b/css/europegame.css
@@ -17,8 +17,7 @@
 }
 
 body {
-  background-color: #f0f4f8;
-  color: #333;
+  background: url('../images/papertexture.png') center/cover no-repeat fixed;
   padding: 8vh;
   text-align: center;
   margin: 0;
@@ -27,7 +26,6 @@ body {
 h1 {
   margin-top: 2rem;
   font-size: 2rem;
-  color: #003366;
 }
 
 #start-screen {
